--- a/src/pages/login/index.less
+++ b/src/pages/login/index.less
@@ -3,7 +3,7 @@
 .login-wrapper {
   width: 100%;
   height: 100%;
-  background-image: url(https://tdesign.gtimg.com/pro-template/login-bg-img.jpg);
+  background-image: url('https://tdesign.gtimg.com/pro-template/login-bg-img.jpg');
   background-size: cover;
   background-position: 50%;
   position: relative;
@@ -18,10 +18,9 @@
 }
 
 .title-container {
-
   .icon {
     width: 290px;
-    height: 60px;
+    height: 40px;
   }
 
   .side-title {
@@ -35,7 +34,7 @@
 
     .tip1 {
       font-size: 14px;
-      color: rgba(0,0,0,.60);
+      color: rgb(0 0 0 / 60%);
     }
 
     .tip2 {
@@ -72,7 +71,6 @@
   }
 
   &.login-phone {
-  
     .bottom-container {
       margin-top: 66px;
     }
@@ -113,7 +111,7 @@
 
     .tip1 {
       font-size: 14px;
-      color: rgba(0,0,0,.60);
+      color: rgb(0 0 0 / 60%);
     }
 
     .tip2 {
@@ -134,7 +132,7 @@
 
     .t-form__controls {
       width: 100%;
-  
+
       button {
         flex-shrink: 0;
         width: 102px;
@@ -142,7 +140,6 @@
         margin-left: 11px;
       }
     }
-    
   }
 }
 
@@ -151,14 +148,13 @@
 
   .tip {
     font-size: 14px;
-    color: @brand-color-8; 
+    color: @brand-color-8;
     cursor: pointer;
     display: inline-flex;
     align-items: center;
     margin-right: 14px;
 
     &:last-child {
-
       &::after {
         display: none;
       }
@@ -177,7 +173,7 @@
 
 .check-container {
   font-size: 14px;
-  color: rgba(0,0,0,.60);
+  color: rgb(0 0 0 / 60%);
 
   .tip {
     float: right;
@@ -185,19 +181,3 @@
     color: @brand-color-8;
   }
 }
-
-.rex-check {
-  font-family: PingFangSC-Regular;
-  font-size: 14px;
-  color: @text-color-placeholder;
-  line-height: 22px;
-}
-
-.format-correct {
-  color: @text-color-primary;
-    
-  .t-icon {
-    color: @success-color-5;
-  }
-}
-
