--- a/src/style/theme/green.less
+++ b/src/style/theme/green.less
@@ -1,13 +1,13 @@
 :root[theme-color='green'],
 :root[theme-color='green'][theme-mode='dark'] {
-  --td-brand-color: #00A870;
-  --td-brand-color-1: #DFF7ED;
-  --td-brand-color-2: #A9E8CD;
-  --td-brand-color-3: #69D5AB;
-  --td-brand-color-4: #30BF8B;
-  --td-brand-color-5: #00A870;
-  --td-brand-color-6: #00935D;
-  --td-brand-color-7: #007E4A;
+  --td-brand-color: #00a870;
+  --td-brand-color-1: #dff7ed;
+  --td-brand-color-2: #a9e8cd;
+  --td-brand-color-3: #69d5ab;
+  --td-brand-color-4: #30bf8b;
+  --td-brand-color-5: #00a870;
+  --td-brand-color-6: #00935d;
+  --td-brand-color-7: #007e4a;
   --td-brand-color-8: #006937;
   --td-brand-color-9: #005426;
   --td-brand-color-10: #004114;
