--- a/src/style/theme/orange.less
+++ b/src/style/theme/orange.less
@@ -1,14 +1,14 @@
 :root[theme-color='orange'],
 :root[theme-color='orange'][theme-mode='dark'] {
-  --td-brand-color-1: #FFEFDB;
-  --td-brand-color-2: #FFD3A3;
-  --td-brand-color-3: #FFB473;
-  --td-brand-color-4: #FF9247;
-  --td-brand-color-5: #ED7B2F;
-  --td-brand-color-6: #D6621C;
-  --td-brand-color-7: #C24C08;
-  --td-brand-color-8: #A23C00;
-  --td-brand-color-9: #872D00;
-  --td-brand-color-10: #691F00;
-  --td-brand-color: #C24C08;
+  --td-brand-color-1: #ffefdb;
+  --td-brand-color-2: #ffd3a3;
+  --td-brand-color-3: #ffb473;
+  --td-brand-color-4: #ff9247;
+  --td-brand-color-5: #ed7b2f;
+  --td-brand-color-6: #d6621c;
+  --td-brand-color-7: #c24c08;
+  --td-brand-color-8: #a23c00;
+  --td-brand-color-9: #872d00;
+  --td-brand-color-10: #691f00;
+  --td-brand-color: #c24c08;
 }
