--- a/src/style/theme/purple.less
+++ b/src/style/theme/purple.less
@@ -1,14 +1,14 @@
 :root[theme-color='purple'],
 :root[theme-color='purple'][theme-mode='dark'] {
-  --td-brand-color: #834EC2;
-  --td-brand-color-1: #F3E0FF;
-  --td-brand-color-2: #E6C4FF;
-  --td-brand-color-3: #D8ABFF;
-  --td-brand-color-4: #C68CFF;
-  --td-brand-color-5: #AE78F0;
-  --td-brand-color-6: #9963D8;
-  --td-brand-color-7: #834EC2;
-  --td-brand-color-8: #6D3BAC;
+  --td-brand-color: #834ec2;
+  --td-brand-color-1: #f3e0ff;
+  --td-brand-color-2: #e6c4ff;
+  --td-brand-color-3: #d8abff;
+  --td-brand-color-4: #c68cff;
+  --td-brand-color-5: #ae78f0;
+  --td-brand-color-6: #9963d8;
+  --td-brand-color-7: #834ec2;
+  --td-brand-color-8: #6d3bac;
   --td-brand-color-9: #572796;
   --td-brand-color-10: #421381;
 }
