--- a/src/style/theme/red.less
+++ b/src/style/theme/red.less
@@ -1,14 +1,14 @@
 :root[theme-color='red'],
 :root[theme-color='red'][theme-mode='dark'] {
-  --td-brand-color: #E34D59;
-  --td-brand-color-1: #FFE9E9;
-  --td-brand-color-2: #FFCCCE;
-  --td-brand-color-3: #FFACAF;
-  --td-brand-color-4: #FF888C;
-  --td-brand-color-5: #FB646D;
-  --td-brand-color-6: #E34D59;
-  --td-brand-color-7: #C93043;
-  --td-brand-color-8: #B01531;
+  --td-brand-color: #e34d59;
+  --td-brand-color-1: #ffe9e9;
+  --td-brand-color-2: #ffccce;
+  --td-brand-color-3: #ffacaf;
+  --td-brand-color-4: #ff888c;
+  --td-brand-color-5: #fb646d;
+  --td-brand-color-6: #e34d59;
+  --td-brand-color-7: #c93043;
+  --td-brand-color-8: #b01531;
   --td-brand-color-9: #960022;
   --td-brand-color-10: #730021;
 }
