--- a/src/style/theme/yellow.less
+++ b/src/style/theme/yellow.less
@@ -1,14 +1,14 @@
 :root[theme-color='yellow'],
 :root[theme-color='yellow'][theme-mode='dark'] {
-  --td-brand-color: #EBB105;
-  --td-brand-color-1: #FFF8B8;
-  --td-brand-color-2: #FFE478;
-  --td-brand-color-3: #FBCA25;
-  --td-brand-color-4: #EBB105;
-  --td-brand-color-5: #D29C00;
-  --td-brand-color-6: #BA8700;
-  --td-brand-color-7: #A37200;
-  --td-brand-color-8: #8C5F00;
-  --td-brand-color-9: #754C00;
-  --td-brand-color-10: #5E3A00;
+  --td-brand-color: #ebb105;
+  --td-brand-color-1: #fff8b8;
+  --td-brand-color-2: #ffe478;
+  --td-brand-color-3: #fbca25;
+  --td-brand-color-4: #ebb105;
+  --td-brand-color-5: #d29c00;
+  --td-brand-color-6: #ba8700;
+  --td-brand-color-7: #a37200;
+  --td-brand-color-8: #8c5f00;
+  --td-brand-color-9: #754c00;
+  --td-brand-color-10: #5e3a00;
 }
