--- a/src/style/variables.less
+++ b/src/style/variables.less
@@ -1,7 +1,7 @@
 /** 公共前缀 */
-@prefix: tdesign-pro;
+@prefix: tdesign-starter;
 
-// 颜色色板
+/* 颜色色板 */
 
 @brand-color-1: var(--td-brand-color-1);
 @brand-color-2: var(--td-brand-color-2);
@@ -62,7 +62,7 @@
 @gray-color-13: var(--td-gray-color-13);
 @gray-color-14: var(--td-gray-color-14);
 
-// 文字 & 图标 颜色
+/* 文字 & 图标 颜色 */
 @font-white-1: var(--td-font-white-1);
 @font-white-2: var(--td-font-white-2);
 @font-white-3: var(--td-font-white-3);
@@ -73,7 +73,7 @@
 @font-gray-3: var(--td-font-gray-3);
 @font-gray-4: var(--td-font-gray-4);
 
-// 基础颜色
+/* 基础颜色 */ 
 @brand-color: var(--td-brand-color); // 色彩-品牌-可操作
 @warning-color: var(--td-warning-color); // 色彩-功能-警告
 @error-color: var(--td-error-color); // 色彩-功能-失败
