--- a/src/style/theme/cyan.less
+++ b/src/style/theme/cyan.less
@@ -1,13 +1,14 @@
 :root[theme-color='cyan'],
-:root[theme-color='cyan'][theme-mode='dark'] {--td-brand-color: #0594FA;
-  --td-brand-color-1: #D6F7FF;
-  --td-brand-color-2: #B2ECFF;
-  --td-brand-color-3: #85DAFF;
-  --td-brand-color-4: #5CC5FC;
-  --td-brand-color-5: #31ADFB;
-  --td-brand-color-6: #0594FA;
-  --td-brand-color-7: #007EDF;
-  --td-brand-color-8: #0068C0;
-  --td-brand-color-9: #00549E;
-  --td-brand-color-10: #00417D;
+:root[theme-color='cyan'][theme-mode='dark'] {
+  --td-brand-color: #0594fa;
+  --td-brand-color-1: #d6f7ff;
+  --td-brand-color-2: #b2ecff;
+  --td-brand-color-3: #85daff;
+  --td-brand-color-4: #5cc5fc;
+  --td-brand-color-5: #31adfb;
+  --td-brand-color-6: #0594fa;
+  --td-brand-color-7: #007edf;
+  --td-brand-color-8: #0068c0;
+  --td-brand-color-9: #00549e;
+  --td-brand-color-10: #00417d;
 }
