--- a/src/style/theme/pink.less
+++ b/src/style/theme/pink.less
@@ -1,14 +1,14 @@
 :root[theme-color='pink'],
 :root[theme-color='pink'][theme-mode='dark'] {
-  --td-brand-color: #ED49B4;
-  --td-brand-color-1: #FFE9FF;
-  --td-brand-color-2: #FFD1FC;
-  --td-brand-color-3: #FFB2F2;
-  --td-brand-color-4: #FF8FE1;
-  --td-brand-color-5: #FF66CC;
-  --td-brand-color-6: #ED49B4;
-  --td-brand-color-7: #D42C9D;
-  --td-brand-color-8: #BC0088;
-  --td-brand-color-9: #9B006B;
-  --td-brand-color-10: #7B0052;
+  --td-brand-color: #ed49b4;
+  --td-brand-color-1: #ffe9ff;
+  --td-brand-color-2: #ffd1fc;
+  --td-brand-color-3: #ffb2f2;
+  --td-brand-color-4: #ff8fe1;
+  --td-brand-color-5: #f6c;
+  --td-brand-color-6: #ed49b4;
+  --td-brand-color-7: #d42c9d;
+  --td-brand-color-8: #bc0088;
+  --td-brand-color-9: #9b006b;
+  --td-brand-color-10: #7b0052;
 }
