--- a/src/pages/dashboard/detail/index.less
+++ b/src/pages/dashboard/detail/index.less
@@ -34,14 +34,14 @@
 
   h1 {
     font-size: 36px;
-    color: rgba(0,0,0,.90);
+    color: rgb(0 0 0 / 90%);
     font-weight: 500;
     padding-top: 8px;
     padding-bottom: 24px;
 
     span {
       font-size: 14px;
-      color: rgba(0,0,0,.30);
+      color: rgb(0 0 0 / 30%);
       padding-left: 8px;
     }
   }
@@ -52,16 +52,15 @@
     align-items: center;
     justify-content: space-between;
     font-size: 14px;
-    color: rgba(0,0,0,.40);
+    color: rgb(0 0 0 / 40%);
     text-align: left;
     line-height: 22px;
-    
+
     > span {
       display: flex;
     }
   }
 }
-  
 
 
 .dashboard-detail-bottom-container {
@@ -70,7 +69,6 @@
   border-radius: @border-radius;
   margin-top: 16px;
   min-height: 400px;
-
 }
 
 .trend-container {
